Added Middleware cors and jwt

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -9,5 +9,6 @@
     <%- include('../component/jumbotron'); %>
 
     <footer><%- include('../component/footer'); %></footer>
+    <script src="./"></script>
   </body>
 </html>
